[gd_scene load_steps=17 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/HUD.gd" type="Script" id=2]
[ext_resource path="res://dodge_assets/art/dodge-them-turkeys-logo.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.101961, 0.345098, 0.0823529, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 1
shadow_offset = Vector2( 3, 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0392157, 0.133333, 0.0313726, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 1
shadow_offset = Vector2( 3, 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.254902, 0.466667, 0.631373, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 1
shadow_offset = Vector2( 3, 3 )

[sub_resource type="InputEventAction" id=2]
action = "ui_select"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://dodge_assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=14]
size = 30
font_data = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 0.727833, 0.29, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.72549, 0.462745, 0.215686, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 3
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.0901961, 0.145098, 0.25098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.72549, 0.462745, 0.215686, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 3
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.996078, 0.803922, 0.490196, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.72549, 0.462745, 0.215686, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 3
shadow_offset = Vector2( 2, 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 30.0
color = Color( 1, 1, 1, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -480.0
margin_top = 1.0
margin_right = -10.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 451, 18 )
custom_colors/font_color = Color( 0.996078, 0.803922, 0.490196, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "1 gift"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecordsLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -257.0
margin_bottom = -204.0
rect_pivot_offset = Vector2( 451, 18 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Most gifts saved: 5
Longest time survived: 7"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
margin_left = 10.0
margin_right = 470.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 451, 18 )
custom_colors/font_color = Color( 0.996078, 0.803922, 0.490196, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "0 seconds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.639216 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 13 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.5
margin_top = -166.0
margin_right = 150.5
margin_bottom = -96.0
rect_pivot_offset = Vector2( 153.5, 56 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 4 )
shortcut = SubResource( 3 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -106.5
margin_top = 112.0
margin_right = 106.5
margin_bottom = 161.0
rect_pivot_offset = Vector2( 153.5, 56 )
custom_colors/font_color = Color( 0.0901961, 0.145098, 0.25098, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 7 )
shortcut_in_tooltip = false
text = "  View Code  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_right = -10.0
margin_bottom = -10.0
custom_colors/font_color = Color( 1, 0.6, 0.6, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.603922 )
text = "00.00.00"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -300.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="InfoButton" to="." method="_on_CodeButton_pressed"]
